# media-resources-ingestion

./: .gitignore  Cargo.toml  README.md  config-test.yaml  docker-compose.yml  run-integration-tests.sh
.ingest/: config.toml
ingest-cli/: Cargo.toml
ingest-cli/src/: auth_commands.rs  cli.rs  commands.rs  main.rs
ingest-core/: Cargo.toml  build.rs
ingest-core/proto/: ingest.proto
ingest-core/src/: bootstrap.rs  config.rs  context.rs  error.rs  lib.rs  models.rs  server.rs  storage.rs
ingest-core/src/auth/: device_auth.rs  mod.rs  oauth.rs  static_provider.rs
ingest-core/src/handlers/: scheduler.rs
ingest-core/src/handlers/jobs/: compression.rs  download.rs  execute.rs  handle.rs  mod.rs  types.rs
ingest-core/src/providers/: dropbox.rs  gdrive.rs  mod.rs  s3.rs
ingest-core/src/services/: mongo.rs  redis.rs
ingest-core/tests/: run_integration_test.rs
ingest-server/: Cargo.toml
ingest-server/src/: main.rs
src/: bootstrap.rs  cli.rs  context.rs  error.rs  lib.rs  main.rs  models.rs  settings.rs  state.rs  storage.rs
src/handlers/: jobs.rs  mod.rs  scheduler.rs
src/handlers/jobs/: compression.rs  download.rs  execute.rs  handle.rs  mod.rs  types.rs
src/routes/: mod.rs  system.rs
src/services/: mongo.rs  redis.rs
tests/: cli_test.rs  config_test.rs  error_test.rs  models_test.rs  run_integration_test.rs
