[package]
name = "file_down_comp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
bb8 = "0.9.1"
clap = "4.6.1"
mongodb = { version = "3.6.0", default-features = false, features = ["bson-3", "compat-3-3-0", "rustls-tls"] }
redis = { version = "1.2.0", default-features = false, features = ["tokio-comp", "bb8"] }
reqwest = { version = "0.13.2", default-features = false, features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
