[package]
name = "media-resources-ingestion"
version = "0.1.0"
edition = "2024"

[dependencies]
bb8 = "0.9.1"
clap = { version = "4.5.55", features = ["derive"] }
dotenvy = "0.15.7"
mongodb = { version = "3.6.0", default-features = false, features = ["bson-3", "compat-3-3-0", "rustls-tls"] }
redis = { version = "1.2.0", default-features = false, features = ["tokio-comp", "bb8"] }
reqwest = { version = "0.13.2", default-features = false, features = ["stream"] }
serde_yaml = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
toml = "1.1.2"
bb8-mongodb = "1.3.0"
futures-util = "0.3.32"
sha2 = "0.11.0"
hex = "0.4.3"
url = { version = "2.5.8", features = ["serde"] }
mime_guess = "2.0.5"
shellexpand = "3.1.2"
dirs = "6.0.0"
chrono = { version = "0.4.44", features = ["serde"] }
async-trait = "0.1.89"
tokio-util = "0.7.18"
