[package]
name = "ingest-cli"
version.workspace = true
edition.workspace = true

[dependencies]
ingest-core = { path = "../ingest-core" }
clap = { version = "4.5.38", features = ["derive", "env"] }
colored = "3.0.0"
atty = "0.2.14"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
dotenvy = "0.15.7"
tonic = "0.12"
ffmpeg-next = "8.1.0"
indicatif = "0.17"
redis = { version = "1.2.2", default-features = false, features = ["tokio-comp"] }
serde_json = "1.0.149"
futures-util = "0.3.32"
