[package]
name = "ingest-core"
version.workspace = true
edition.workspace = true

[lib]
name = "ingest_core"
path = "src/lib.rs"

[dependencies]
bb8 = "0.9.1"
dotenvy = "0.15.7"
mongodb = { version = "3.6.0", default-features = false, features = ["bson-3", "compat-3-3-0", "rustls-tls"] }
redis = { version = "1.2.2", default-features = false, features = ["tokio-comp", "bb8"] }
serde_yaml = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
toml = "1.1.2"
bb8-mongodb = "1.3.0"
futures-util = "0.3.32"
sha2 = "0.11.0"
hex = "0.4.3"
url = { version = "2.5.8", features = ["serde"] }
mime_guess = "2.0.5"
shellexpand = "3.1.2"
dirs = "6.0.0"
chrono = { version = "0.4.44", features = ["serde"] }
async-trait = "0.1.89"
tokio-util = { version = "0.7.18", features = ["io"] }
image = { version = "0.25.0", features = ["avif"] }
thiserror = "2.0.18"
wreq = { version = "5.3.0", features = ["stream", "json"] }
wreq-util = "2.2.5"
ffmpeg-next = "8.1.0"
mimetype-detector = "0.3"
flate2 = "1.1.9"
zip = "8.6.0"
zstd = "0.13.3"
sevenz-rust = "0.6.1"
tonic = "0.12"
prost = "0.13"
aws-sdk-s3 = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls"] }
aws-config = { version = "1", default-features = false, features = ["rustls", "behavior-version-latest"] }
aws-credential-types = "1"
aws-sigv4 = "1"

[build-dependencies]
tonic-build = "0.12"
