[package]
name = "ingest-server"
version.workspace = true
edition.workspace = true

[dependencies]
ingest-core = { path = "../ingest-core" }
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
dotenvy = "0.15.7"
ffmpeg-next = "8.1.0"
